Jan. 6th 2024 First Commit

--- a/后端.md
+++ b/后端.md
@@ -3483,6 +3483,38 @@ User selectById(int id);
 
 # JavaWeb
 
+> JavaWeb三大组件：Servlet、Filter、Listener
+
+- tomcat 依赖导入
+
+  ```xml
+  <!-- 打包方式是war包，并通过maven插件中的tomcat7:run启动web项目 -->
+  <plugin>
+      <groupId>org.apache.tomcat.maven</groupId>
+      <artifactId>tomcat7-maven-plugin</artifactId>
+      <version>2.2</version>
+      <configuration>
+          <port>80</port>
+          <path>/</path>
+      </configuration>
+  </plugin>
+  ```
+
+- Servlet、Filter、Listener依赖导入
+
+  ```xml
+  <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <!-- 编译、测试环境有效，运行环境无效 -->
+      <!-- 项目部署在Tomcat上时，Tomcat中已有该jar包，所以运行时排除jar包，防止冲突 -->
+      <scope>provided</scope> 
+  </dependency>
+  ```
+
+
+
 ## Tomcat
 
 - 项目结构
@@ -3529,31 +3561,7 @@ User selectById(int id);
 
   - 方法2：maven的Tomcat内嵌插件
 
-    ```xml
-    <!-- 打包方式是war包，并通过maven插件中的tomcat7:run启动web项目 -->
-    <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.2</version>
-        <configuration>
-            <port>80</port>
-            <path>/</path>
-        </configuration>
-    </plugin>
-    ```
-
 - 创建web项目，导入Servlet依赖坐标
-
-  ```xml
-  <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-      <!-- 编译、测试环境有效，运行环境无效 -->
-      <!-- 项目部署在Tomcat上时，Tomcat中已有该jar包，所以运行时排除jar包，防止冲突 -->
-      <scope>provided</scope> 
-  </dependency>
-  ```
 
 - 创建：定义一个类，实现Servlet接口，重写接口中的方法。并加上`@WebServlet("uri")`指定uri路径的访问路径
 
@@ -3631,7 +3639,7 @@ User selectById(int id);
 
 
 
-### 其他
+### 其他配置
 
 - urlPattern 配置
 
@@ -3644,11 +3652,188 @@ User selectById(int id);
     - 任意匹配：`@WebServlet("/")`
 
   - 存在一个名叫 `DefaultServlet` 的默认Servlet，当其他所有Servlet都无法匹配上时，会将请求交给 `DefaultServlet`。该Servlet的作用是在静态资源中（html、png等）找同路径的资源
-
 - XML配置方式编写Servlet
 
   - Servlet从3.0版本开始支持使用注解配置，3.0之前只支持xml配置文件的配置方式
   - 方法：略
+
+
+
+### 请求与响应
+
+- Request
+
+  - Request继承体系
+
+    - ServletRequest：java提供的请求接口
+    - HttpServletRequest：java提供，继承自ServeltRequest，对Http协议封装的请求对象接口
+    - RequestFacade：Tomcat定义的实现类
+
+  - tomcat7 中请求中文乱码
+
+    > tomcat7 中实现的 Request 接口
+    >
+    > > 在解析Post之类的请求时，会通过字符流读取参数，可通过设置字符流字符集解决
+    > >
+    > > 在解析Get之类的请求时，直接用ISO-8859-1字符集解码，从而导致乱码
+
+    - Post请求乱码：`request.setCharacterEncoding("UTF-8")`
+
+    - Get请求乱码（以请求路径：`/localhost/request-demo?firstName=张` 为例）
+
+      - 流程：
+
+        `张` --utf-8编码--> `1110 0101   1011 1100   1010 0000` 
+
+        --URL编码--> `%E5%BC%A0` 
+
+        --传输到服务器--> `%E5%BC%A0` 
+
+        --URL解码--> `1110 0101   1011 1100   1010 0000`
+
+        --ISO-8859-1解码--> `???`
+
+      - 解决方法流程：
+
+        `???` --ISO-8859-1编码-->  `1110 0101   1011 1100   1010 0000`
+
+        --utf-8解码--> `张三`
+
+        ```java
+        String username = request.getParamter("username"); // 乱码
+        
+        byte[] bytes = username.getBytes(StandardCharsets.ISO_8859_1);
+        username = new String(bytes, StandardCharsets.UTF-8);
+        ```
+
+  - Request请求转发（多servlet共同处理请求，**同一服务器内部的跳转**）
+
+    - 实现方式：`req.getRequestDispatcher("转发资源路径").forward(req, resp);`
+
+    - 请求转发资源间数据共享，使用Request对象
+
+      | 返回值 | 方法名          | 参数                  | 作用                  |
+      | ------ | --------------- | --------------------- | --------------------- |
+      | void   | setAttribute    | String name, Object o | 存储数据到request域中 |
+      | Object | getAttribute    | String name           | 根据key，获得值       |
+      | void   | removeAttribute | String name           | 根据key，删除对应键值 |
+
+- Response
+
+  - Response继承体系
+
+    - ServletRequest
+    - HttpServletRequest
+    - ResponseFacade
+
+  - Response请求重定向（非本servlet处理内容，重定向的正确的处理位置，**服务器内、外部均可跳转**）
+
+    ```java
+    // 设置状态码
+    response.setStatus(302);
+    // 重定向，设置响应头 Location
+    response.setHeader("Location", "/虚拟目录（一般是项目名）/重定向资源路径");
+    ```
+
+    ```java
+    // 简化重定向
+    response.sendRedirect("/虚拟目录/资源路径");
+    ```
+
+  - 设置返回类型和字符集
+
+    ```java
+    // 如果返回的内容包含需要解析的html标签，需要设置解析文件类型为html
+    response.setHeader("content-type", "text/html");
+    // 简化
+    response.setContentType("text/html;charset=utf-8");
+    
+    // 流不需要关闭，它会随着响应的结束，response对象的销毁而关闭
+    PrintWriter writer = resp.getWriter();
+    writer.write("<h1>你好，世界！</h1>");
+    ```
+
+- 什么时候需要加虚拟目录，什么时候不需要加虚拟目录？
+  - 明确路径供谁使用
+    - 浏览器使用：需要加虚拟目录（项目访问路径）
+    - 服务端使用：不需要加虚拟目录
+  - 举例：
+    - `<a href="路径">`：需要加
+    - `<form action="路径">`：需要加
+    - `req.getRequestDispatcher("路径")`：不用加
+    - `resp.sendRedirect("路径")`：需要加
+  - 动态获取虚拟目录：`request.getContextPath()`
+
+
+
+
+
+## Filter
+
+> 过滤器一般完成一些**通用**的操作，如：权限控制、统一编码处理、敏感字符处理等
+
+- 快速入门
+
+  - 定义类，实现Filter接口，并重写其所有方法
+  - 配置Filter拦截资源的路径：在类上定义`@WebFilter("拦截资源路径")`注解
+
+  ```scala
+  @WebFilter(Array("/*"))
+  class FilterDemo01 extends Filter{
+      override def init(filterConfig: FilterConfig): Unit = {}
+  
+      override def doFilter(servletRequest: ServletRequest, servletResponse: ServletResponse, filterChain: FilterChain): Unit = {
+          val map = servletRequest.getParameterMap
+          if (map.containsKey("username")) {
+              // 放行
+              filterChain.doFilter(servletRequest, servletResponse)
+              // 此处代码在servlet执行完后执行
+              System.out.println("即将返回资源");
+              return
+          }
+          println("拦截请求")
+          val response = servletResponse.asInstanceOf[HttpServletResponse]
+          response.setStatus(HttpServletResponse.SC_FORBIDDEN)
+          response.getWriter.println("The request has been intercepted")
+      }
+  
+      override def destroy(): Unit = {}
+  }
+  ```
+
+- 过滤器链：略
+
+
+
+
+
+## Listener
+
+> 用来监听Application、Session、Request这三个对象的创建、销毁和属性变化情况
+
+- 快速入门
+
+  ```scala
+  @WebListener
+  class MyListener extends ServletContextListener {
+    override def contextInitialized(servletContextEvent: ServletContextEvent): Unit = ???
+  
+    override def contextDestroyed(servletContextEvent: ServletContextEvent): Unit = ???
+  }
+  ```
+
+- 监听器接口
+
+  | 监听器分类         | 监听器接口名                    | 监听内容                  |
+  | ------------------ | ------------------------------- | ------------------------- |
+  | ServletContext监听 | ServletContextListener          | 创建、销毁                |
+  |                    | ServletContextAttributeListener | 属性变化                  |
+  | Session监听        | HttpSessionListener             | 创建、销毁                |
+  |                    | HttpSessionAttributeListener    | 属性变化                  |
+  |                    | HttpSessionBindingListener      | 对象与Session的绑定、解除 |
+  |                    | HttpSessionActivationListener   | Session数据的钝化和活动   |
+  | Request监听        | ServletRequestListener          | 创建、销毁                |
+  |                    | ServletRequestAttributeListener | 属性变化                  |
 
 
 
@@ -4873,7 +5058,7 @@ public String date2(@DateTimeFormat(pattern = "yyyy-MM-dd") Date date){
 
     - 在tomcat 8之前 cookie不能直接存储中文数据，需要转码，一般用URL编码
 
-    - 在tomcat 8之后，cookie可以直接存储中文，但仍不支持特殊字符
+    - 在tomcat 8及之后，cookie可以直接存储中文，但仍不支持特殊字符
 
       ```java
       // 对应的类在java.net包下
@@ -5584,7 +5769,7 @@ afterCompletion...
 - scala 编译打包插件
 
   ```xml
-  <!-- This plugin compiles Scala files，需要 Scala 依赖 -->
+  <!-- This plugin compiles Scala files，需要 scala-library 依赖 -->
   <plugin>
       <groupId>net.alchim31.maven</groupId>
       <artifactId>scala-maven-plugin</artifactId>
