--- a/后端2.md
+++ b/后端2.md
@@ -3264,23 +3264,17 @@ public class MyDao {
 
 #### 内存溢出
 
-> <font color=red>参数设置</font>
->
-> > 栈：-Xss栈大小
-> >
-> > 堆：total 和 max 一般设为相同值
-> >
-> > > total：-Xms大小
-> > >
-> > > max：-Xmx大小
-> >
-> > 方法区：一般需要设置
-> >
-> > > jdk8之前设置永久代大小：-XX:MaxPermSize=值
-> > >
-> > > jdk7之后设置元空间打字：-XX:MaxMetaspaceSize=值
-> >
-> > 直接内存（若使用到NIO，一般需要设置）：-XX:MaxDirectMemorySize=值
+- **参数设置总览**
+  - 栈：`-Xss栈大小`
+  - 堆：total 和 max 一般设为相同值
+    - total：`-Xms大小`
+    - max：`-Xmx大小`
+  - 方法区：一般需要设置
+    - jdk8之前设置永久代大小：`-XX:MaxPermSize=值`
+    - jdk7之后设置元空间大小：`-XX:MaxMetaspaceSize=值`
+  - 直接内存（若使用到NIO，一般需要设置）：`-XX:MaxDirectMemorySize=值`
+
+
 
 - java虚拟机栈内存溢出（StackOverflowError）
 
@@ -3382,9 +3376,9 @@ public class MyDao {
 
 > 虚拟机参数
 >
-> > 打印类的加载日志：-XX:+TraceClassLoading
+> > 打印 类的加载日志：-XX:+TraceClassLoading
 > >
-> > 打印类的卸载日志：-XX:+TraceClassUnloading
+> > 打印 类的卸载日志：-XX:+TraceClassUnloading
 
 - System.gc()：向虚拟机发送一个垃圾回收的请求，具体是否以及何时进行垃圾回收由Java虚拟机自行判断
 
