Jan. 8th 2024 First Commit

--- a/后端.md
+++ b/后端.md
@@ -3910,16 +3910,28 @@ User selectById(int id);
 
 
 
-
 ### bean的生命周期
 
-- 方法一：bean 中指定 **init** 方法和 **destroy** 方法
+- 生命周期
+  1. bean对象的创建（调用无参构造）
+  2. 给bean对象设置相关属性
+  3. bean后置处理器（初始化之前）
+  4. bean对象初始化（调用指定初始化方法）
+  5. bean后置处理器（初始化之后）
+  6. bean对象创建完成，可以使用
+  7. bean对象销毁（调用指定销毁方法）
+  8. IOC容器关闭
+
+- 初始化、销毁方法的设置
+
+  - 方法一：bean 中指定 **init** 方法和 **destroy** 方法
 
   ```xml
   <bean id="userDao" class="cn.langh.dao.impl.UserDaoImpl" init-method="init" destroy-method="destroy"/>
   ```
 
-- 方法二：实现 **InitializingBean** 和 **DisposableBean** 接口,重写方法
+  - 方法二：实现 **InitializingBean** 和 **DisposableBean** 接口,重写方法
+
 
   ```java
   @Override
@@ -3933,7 +3945,35 @@ User selectById(int id);
       System.out.println("初始化方法");
   }
   ```
+
+- 后置处理器
+
+  - 创建后置处理器，实现后置处理器接口，重写里面两个默认方法
+
+  ```java
+  public class MyBeanPostProcessor implements BeanPostProcessor {
+      @Override
+      public Object postProcessBeforeInitialization(Object bean, String beanName) throws BeansException {
+          System.out.printf("后置处理器 %s初始化前执行\n", beanName);
+          return bean;
+      }
   
+      @Override
+      public Object postProcessAfterInitialization(Object bean, String beanName) throws BeansException {
+          System.out.printf("后置处理器 %s初始化后执行\n", beanName);
+          return bean;
+      }
+  }
+  ```
+
+  - 配置后置处理器的bean
+
+  ```xml
+  <bean id="..." class="cn.eli.bean.MyBeanPostProcessor"/>
+  ```
+
+  
+
   
 
 ### 依赖注入
@@ -3943,16 +3983,10 @@ User selectById(int id);
   - 简单注入
 
   ```java
+  @Setter
   public class UserDao implements UserDaoImpl{
       private int connectionNum;
       private String databaseName;
-      
-      public void setConnectionNum(int connectionNum){
-          this.connectionNum = connectionNum;
-      }
-      public void setDatabaseName(String databaseName){
-          this.databaseName = databaseName;
-      }
   }
   ```
 
@@ -3966,19 +4000,23 @@ User selectById(int id);
   - 引用注入
 
   ```java
+  @Setter
   public class BookServiceImpl implements BookService{
       private UserDao userDao;
-      
-  	public void setUserDao(UserDao userDao){
-      	this.userDao = userDao;
-  	}
+      private BookDao bookDao;
   }
   ```
 
   ```xml
   <bean id="userDao" class="cn.langh.dao.impl.UserDaoImpl"/>
+  
   <bean id="userService" class="cn.langh.service.impl.UserServiceImpl">
-  	<property name="bookDao" ref="bookDao"/>
+      <!-- 外部bean -->
+      <property name="userDao" ref="userDao"/>
+      <!-- 内部bean -->
+      <property name="bookDao">
+          <bean id="bookDao" class="......"/>
+      </property>
   </bean>
   ```
 
@@ -4000,41 +4038,40 @@ User selectById(int id);
 
   ```xml
   <bean id="bookDao" class="cn.langh.dao.impl.BookDaoImpl">
+      <!-- 标准注入方式 -->
       <constructor-arg name="databaseName" value="mysql"/>
       <constructor-arg name="connectionNum" value="10"/>
+      
+      <!-- 解耦合注入方式 -->
+      <!-- 依靠参数类型注入 -->
+      <constructor-arg type="int" value="10"/>
+      <!-- 依靠参数位置注入 -->
+      <constructor-arg index="0" value="10"/>
   </bean>
-  ```
-
-  ​		注：注入时
-
-  ​			标准注入：\<constructor-arg name="connectionNum" value="10"/>
-
-  ​			用参数类型解耦合注入：\<constructor-arg type="int" value="10"/>
-
-  ​			用参数位置解耦合注入：\<constructor-arg index="0" value="10"/>
-
   
-
-  - 引用类型
-
-  ```java
-  public class BookServiceImpl implements BookService {
-      private BookDao bookDao;
-      private UserDao userDao;
   
-      public BookServiceImpl(BookDao bookDao,UserDao userDao){
-          this.bookDao = bookDao;
-          this.userDao = userDao;
-      }
-  }
   ```
+  
+- 引用类型
 
-  ```xml
-  <bean id="bookService" class="cn.langh.service.impl.BookServiceImpl">
-      <constructor-arg name="bookDao" ref="bookDao"/>
-      <constructor-arg name="userDao" ref="userDao"/>
-  </bean>
-  ```
+```java
+public class BookServiceImpl implements BookService {
+    private BookDao bookDao;
+    private UserDao userDao;
+
+    public BookServiceImpl(BookDao bookDao,UserDao userDao){
+        this.bookDao = bookDao;
+        this.userDao = userDao;
+    }
+}
+```
+
+```xml
+<bean id="bookService" class="cn.langh.service.impl.BookServiceImpl">
+    <constructor-arg name="bookDao" ref="bookDao"/>
+    <constructor-arg name="userDao" ref="userDao"/>
+</bean>
+```
 
 - 自动装配（优先级低于setter注入 与 构造器注入）
 
@@ -4051,11 +4088,11 @@ User selectById(int id);
   - array
 
   ```xml
-  <property name="array">
+  <property name="hobbies">
       <array>
-          <value>1</value>
-          <value>2</value>
-          <value>3</value>
+          <value>抽烟</value>
+          <value>喝酒</value>
+          <value>烫头</value>
       </array>
   </property>
   ```
@@ -4109,7 +4146,52 @@ User selectById(int id);
   </property>
   ```
 
+- 特殊值的注入
+
+  ```xml
+  <bean id="..." class="......">
+      <!-- null值的注入 -->
+      <property name="..."><null/></property>
+      <!-- 特殊字符的注入，如“ <> ”（xml实体） -->
+      <property name="..." value="&lt;&gt;"></property>
+      <!-- CDATA区 -->
+      <property name="...">
+          <value><![CDATA[ 特殊符号 ]]></value>
+      </property>
+  </bean>
+  ```
+
+- 级联赋值
+
+  ```java
+  @Setter
+  @Getter // 级联赋值的getter是必要的
+  public class A {
+      public String name;
+  }
+  ```
+
+  ```java
+  @Setter
+  public class B {
+      public A a;
+  }
+  ```
+
+  ```xml
+  <bean id="a" class=".....">
+      <property name="name" value="aaa"/>
+  </bean>
   
+  <bean id="b" class="......">
+      <property name="a" ref="a"/>
+      <!-- 级联赋值 -->
+      <property name="a.name" value="bbb"/>
+  </bean>
+  ```
+
+- [p命名空间注入](https://www.bilibili.com/video/BV1kR4y1b7Qc?p=30&vd_source=25ad2de4838bd28372a4956bac63c618)：略
+- [引用集合类型的bean](https://www.bilibili.com/video/BV1kR4y1b7Qc?p=29&vd_source=25ad2de4838bd28372a4956bac63c618)：略
 
 ### 数据源对象管理
 
@@ -4122,28 +4204,42 @@ User selectById(int id);
 </bean>
 ```
 
-​		加载外部properties
+- 加载外部properties
 
-		1. 开启context命名空间
-		2. 使用context空间加载properties文件
+  - 引入context命名空间（添加约束）
 
-```xml
-<context:property-placeholder location="jdbc.properties"/>
+    ```xml
+    <beans xmlns="http://www.springframework.org/schema/beans"
+           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+           xmlns:context="http://www.springframework.org/schema/context"
+           xsi:schemaLocation="http://www.springframework.org/schema/beans
+           http://www.springframework.org/schema/beans/spring-beans.xsd
+           http://www.springframework.org/schema/context
+           http://www.springframework.org/schema/context/spring-context.xsd">
+    ```
 
-<bean id="dataSource2" class="com.mchange.v2.c3p0.ComboPooledDataSource">
-    <property name="driverClass" value="${jdbc.driver}"/>
-    <property name="jdbcUrl" value="${jdbc.url}"/>
-    <property name="user" value="${jdbc.username}"/>
-    <property name="password" value="${jdbc.password}"/>
-</bean>
-```
+  - 使用context空间加载properties文件
 
-注：
+    ```xml
+    <context:property-placeholder location="jdbc.properties"/>
+    
+    <bean id="dataSource2" class="com.mchange.v2.c3p0.ComboPooledDataSource">
+        <property name="driverClass" value="${jdbc.driver}"/>
+        <property name="jdbcUrl" value="${jdbc.url}"/>
+        <property name="user" value="${jdbc.username}"/>
+        <property name="password" value="${jdbc.password}"/>
+    </bean>
+    ```
 
-1. 命名空间默认为优先加载系统属性，可在context标签中设置 system-properties-mode="NEVER"\
-2. context标签中 location 属性设置为“**\*.properties**”表示加载所有后缀为properties的文件
-2. 加载properties的标准格式为 **location="classpath:*.properties"**
-2. 从类路径或jar包中搜索并加载properties文件格式为 **location="classpath\*:\*.properties"**
+- 注：
+
+  1. 命名空间默认为优先加载系统属性，可在context标签中设置 `system-properties-mode="NEVER"`
+
+  2. context标签中 location 属性设置为 `*.properties` 表示加载所有后缀为properties的文件
+
+  3. 加载properties的标准格式为 `location="classpath:*.properties"`
+
+  4. 从类路径或jar包中搜索并加载properties文件格式为 `location="classpath*:*.properties"`
 
 
 
@@ -4151,42 +4247,37 @@ User selectById(int id);
 
 - 获取容器 
 
-```java
-new ClassPathXmlApplicationContext("applicationContext.xml");
-```
+  ```java
+  new ClassPathXmlApplicationContext("applicationContext.xml");
+  ```
 
-```java
-new FileSystemXmlApplicationContext("\绝对路径\");
-```
+  ```java
+  new FileSystemXmlApplicationContext("绝对路径");
+  ```
 
 - 获取bean
 
-```java
-UserDao userDao = (UserDao) app.getBean("userDao");
-```
+  ```java
+  UserDao userDao = (UserDao) app.getBean("userDao");
+  UserDao userDao = app.getBean(UserDao.class);
+  UserDao userDao = app.getBean("userDao",userDao.class);
+  ```
+  
+- 注：
 
-```java
-UserDao userDao = app.getBean("userDao",userDao.class);
-```
+  - BeanFactory 是 IoC 容器的顶层接口，初始化BeanFactory对象时，加载的bean延迟加载
+  - ApplicationContext 接口是 spring 容器的核心接口，初始化时bean立即加载，可用 `lazy-init` 属性控制
 
-```java
-UserDao userDao = app.getBean(UserDao.class);
-```
+  - ApplicationContext 接口提供的 bean 操作相关方法，通过替他接口拓展其功能
 
-注：
+  - ApplicationContext 接口常用的初始化类
+    - ClassPathXmlApplicationContext
+    - FileSystemXmlApplicationContext
 
-- BeanFactory 是 IoC 容器的顶层接口，初始化BeanFactory对象时，加载的bean延迟加载
-- ApplicationContext 接口是 spring 容器的核心接口，初始化时bean立即加载，可用 lazy-init 属性控制
-- ApplicationContext 接口提供的 bean 操作相关方法，通过替他接口拓展其功能
-- ApplicationContext 接口常用的初始化类
-  - ClassPathXmlApplicationContext
-  - FileSystemXmlApplicationContext
 
 
 
 ### 总结
-
-- bean相关
 
 ```xml
 <bean
@@ -4209,63 +4300,89 @@ UserDao userDao = app.getBean(UserDao.class);
 
 ## 注解开发
 
+> Spring从2.5开始提供了对注解技术的全面支持
+
 ### 定义bean
 
 - 定义bean
 
-  - @Component("\名称\\")（注解在类上）
-    - 业务层：@Service
-    - 数据层：@Repository
-    - 表现层：@Controller
+  - `@Component("名称")`（注解在类上）
+    - 业务层：`@Service`
+    - 数据层：`@Repository`
+    - 表现层：`@Controller`
 
 - bean的管理
 
-  - @Scope("singleton/prototype")（注解在类上）
+  - `@Scope("singleton/prototype")`（注解在类上）
 
   - 生命周期（注解在方法上）
-    - 初始化方法：@PostConstruct（构造方法后运行）
-    - 销毁方法：@PreDestory（销毁方法前运行）
+    - 初始化方法：`@PostConstruct`（构造后运行）
+    - 销毁方法：`@PreDestory`（销毁前运行）
 
 - 组件扫描
 
   - xml
 
-  ```xml
-  <context:component-scan base-package="cn.langh"/>
-  ```
+    ```xml
+    <beans xmlns="http://www.springframework.org/schema/beans"
+           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+           xmlns:context="http://www.springframework.org/schema/context"
+           xsi:schemaLocation="http://www.springframework.org/schema/beans
+           http://www.springframework.org/schema/beans/spring-beans.xsd
+           http://www.springframework.org/schema/context
+           http://www.springframework.org/schema/context/spring-context.xsd">
+        
+    <context:component-scan base-package="cn.langh"/>
+    ```
 
-  - 配置类
-
-  @ComponentScan("cn.langh")
-
-  @ComponentScan({"cn.langh.dao","cn.langh.service})
+  - 注解
+    - `@ComponentScan("cn.langh")`
+    - `@ComponentScan({"cn.langh.dao","cn.langh.service})`
 
 - 配置类
-  - 注解：@Configuration
-  - 添加外部配置：@ImportResource("applicationContext.xml")
-  - 组件扫描：@ComponentScan
-  - 导入其他配置类：@Import({jdbcConfig.class,...})
-  - 获取容器：new AnnotationConfigApplicationContext(SpringConfig.class)
+  - 注解：`@Configuration`
+  - 添加外部配置：`@ImportResource("applicationContext.xml")`
+  - 组件扫描：`@ComponentScan`
+  - 导入其他配置类：`@Import({jdbcConfig.class,...})`
+  - 获取容器：`new AnnotationConfigApplicationContext(SpringConfig.class)`
 
 
 
 ### 依赖注入
 
 - 配置文件
-  - 加载：@propertySource({"\文件名1\\","\文件名2\\",...})
-  - 使用：${\键\\}
+  - 加载：
+    - `@propertySource({"文件名1", "文件名2", ...})`
+    - `@PropertySources({@PropertySource("文件1"), @PropertySource("文件2"), ...})`
+  - 使用：`${键}`
+  
 - 简单类型注入
-  - @Value("\值\\")
+  - `@Value("值")`
 
 - 自动装配
 
-  - @Autowired（注解在成员变量上）
+  - `@Autowired`（可注解在构造方法上、方法上、成员变量上、形参上、注解上）
 
-    按类型注入，若容器中含相同类型的bean，则按成员变量对应的名称注入
-
-  - @Qualifier("\名称\\")（注解在成员变量上）
-
-    注入指定名称的bean，依赖于@Autowired
+    - **先按类型注入，若容器中含相同类型的bean，则使用属性名作为名称查找**
+    - 该注解加在属性上，并不依赖于setter，而是通过反射直接对属性赋值
+  
+  - `@Qualifier("名称")`：依赖于@Autowired，只注入指定名称的bean
+  
+  - `@Resource("名称")`（可注解在属性上、setter方法上）
+  
+    - **先根据名称装配**，未指定名称时，使用属性名作为名称查找。通过名称无法找到bean时，会自动**启用类型装配**
+  
+    - 是JakartaEE的规范之一，在JDK拓展包中【仅jdk8不需要引入依赖】
+  
+      ```xml
+      <dependency>
+          <groupId>jakarta.annotation</groupId>
+          <artifactId>jakarta.annotation-api</artifactId>
+          <version>2.1.1</version>
+      </dependency>
+      ```
+  
+      
 
 
 
@@ -4293,7 +4410,7 @@ public class JdbcConfig {
     private String password;
 
     @Bean
-    public DataSource dataSource(\形参\){
+    public DataSource dataSource(形参){
         DruidDataSource ds = new DruidDataSource();
         ds.setDriverClassName(driver);
         ds.setUrl(url);
@@ -4374,37 +4491,79 @@ public class MybatisConfig {
 
 ## Spring整合Junit
 
-- 位置坐标
+- spring整合junit5
 
-```xml
-<dependency>
-    <groupId>junit</groupId>
-    <artifactId>junit</artifactId>
-    <version>4.13.2</version>
-    <scope>test</scope>
-</dependency>
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-test</artifactId>
-    <version>5.2.10.RELEASE</version>
-</dependency>
-```
+  - 坐标
 
-- 例：
+    ```xml
+    <!-- 此处以spring6为例 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>6.0.11</version>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.9.0</version>
+        <scope>test</scope>
+    </dependency>
+    ```
 
-```java
-@RunWith(SpringJUnit4ClassRunner.class)//设置类运行器
-@ContextConfiguration(classes = SpringConfig.class)//指定spring容器
-public class UserServiceTest {
-    @Autowired
-    private UserService userService;
+  - 使用
 
-    @Test
-    public void testGetById(){
-        System.out.println(userService.getById(1));
+    ```java
+    import org.junit.jupiter.api.Test;
+    
+    // @SpringJUnitConfig(locations="classpath:配置文件.xml")
+    @SpringJUnitConfig(classes = 配置类.class)
+    public class SpringTestJunit4 {
+        @Autowired
+        private UserService userService;
+    
+        @Test
+        public void testGetById(){
+            System.out.println(userService.getById(1));
+        }
     }
-}
-```
+    ```
+
+- spring整合junit4
+
+  - 坐标
+
+    ```xml
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+        <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>5.2.10.RELEASE</version>
+    </dependency>
+    ```
+
+  - 使用
+
+    ```java
+    import org.junit.Test;
+    
+    @RunWith(SpringJUnit4ClassRunner.class)//设置类运行器
+    @ContextConfiguration(classes = 配置类.class)//指定spring容器
+    // @ContextConfiguration("classpath:配置文件.xml")
+    public class SpringTestJunit4 {
+        @Autowired
+        private UserService userService;
+    
+        @Test
+        public void testGetById(){
+            System.out.println(userService.getById(1));
+        }
+    }
+    ```
 
 
 
@@ -4412,82 +4571,123 @@ public class UserServiceTest {
 
 ## AOP面向切面编程
 
+> AOP可以通过注解和[XML](https://www.bilibili.com/video/BV1kR4y1b7Qc?p=60&vd_source=25ad2de4838bd28372a4956bac63c618)配置，本篇主要记录基于注解配置AOP的方式
+
 ### 快速入门
 
-- 导入坐标
+- 引入aop相关依赖
 
-```xml
-<dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-aop</artifactId>
-    <version>5.2.10.RELEASE</version>
-</dependency>
-<dependency>
-    <groupId>org.aspectj</groupId>
-    <artifactId>aspectjweaver</artifactId>
-    <version>1.9.9.1</version>
-    <scope>runtime</scope>
-</dependency>
-```
+  ```xml
+  <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>5.2.10.RELEASE</version>
+  </dependency>
+  <!--
+  AspectJ：是AOP思想的一种实现。本质是静态代理，将代理逻辑“织入”被代理的目标类编译得到的字节码文件，所以最终效果是动态的。weaver就是织入器。
+  Spring 只是借用了AspectJ中的注解
+  -->
+  <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+      <version>5.2.10.RELEASE</version>
+  </dependency>
+  ```
 
-- 制作连接点方法（原始造作，Dao接口与实现类）
-- 制作共性功能（通知类与通知）
+- 开启自动代理
 
-- 定义切入点
+  - 配置文件
 
-```java
-@Pointcut("execution(切入点表达式)")
-```
-
-- 绑定切入点与通知关系（切面）
-- 例：
-
-```java
-@Configuration
-@ComponentScan
-@EnableAspectJAutoProxy
-public class SpringConfig{
+    ```xml
+    <?xml version="1.0" encoding="UTF-8"?>
+    <beans xmlns="http://www.springframework.org/schema/beans"
+           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+           xmlns:aop="http://www.springframework.org/schema/aop"
+           xsi:schemaLocation="http://www.springframework.org/schema/beans
+           http://www.springframework.org/schema/beans/spring-beans.xsd
+           http://www.springframework.org/schema/aop
+           http://www.springframework.org/schema/aop/spring-aop.xsd">
     
-}
-```
+    <aop:aspectj-autoproxy/>
+    ```
 
-```java
-@Component
-@Aspect
-public class MyAdvice {
-    @Pointcut("execution(void cn.langh.dao.UserDao.save())")
-    private void pt(){}
+  - 配置类：`@EnableAspectJAutoProxy`
 
-    @After("pt()")
-    public void method(){
-        System.out.println(System.currentTimeMillis());
-    }
-}
-```
+- 创建目标资源（接口和实现类，jdk代理依赖于接口）
+
+- 创建切面类（切入点和通知类型）
+
+  - 定义切入点：`@Pointcut("execution(切入点表达式)")`
+
+  - 绑定切入点与通知关系（切面）
+
+
+- 举例：
+
+  ```java
+  @Configuration
+  @ComponentScan
+  @EnableAspectJAutoProxy
+  public class SpringConfig{
+      
+  }
+  ```
+
+  ```java
+  @Component
+  @Aspect
+  public class LogAspect {
+      @Pointcut("execution(void cn.langh.dao.UserDao.save())")
+      private void pt(){}
+  
+      // @After("execution(void cn.langh.dao.UserDao.save())")
+      // @After("cn.eli.LogAspect.pt()") // 这样写，一个切入点表达式可用供多个方法使用
+      @After("pt()") // 同一个类中可以直接写方法
+      public void method(){
+          System.out.println("日志...");
+      }
+  }
+  ```
+
+  
 
 
 
 ### 切入点表达式
 
-- 动作关键字：描述切入点的行为动作，例如execution表示执行到指定切入点
+- 横切关注点
 
-- 访问修饰符：public，private等，可以省略
+  - 分散在各个模块中同样的问题，如日志记录、用户验证、事务处理、数据缓存等，都属于**横切关注点**
+  - 可以使用多个横切关注点，对相关方法进行多个方面不同的增强
+
+- 语法
+
+  ```java
+  @Pointcut("execution(权限修饰符 方法返回值类型 方法所在接口全路径.方法名(方法参数))")
+  ```
+
+  - 动作关键字：描述切入点的行为动作，例如`execution`表示执行到指定切入点
+
+
+  - 访问修饰符：`public`，`private`等，可以省略
+  - **必须是接口的全路径**，因为jdk动态代理依赖于接口
+
 
 - 可以使用通配符描述切入点，快速描述
 
-  - \* ：单个独立的任意符号，可以独立出现，也可以作为前缀或后缀的匹配符出现
+  - `*` ：**单个独立**的任意符号，可以独立出现，也可以作为前缀或后缀的匹配符出现（参数中填一个*表示只有一个参数）
 
   ```java
   execution(public * cn.langh.*.*Service.find*(*))
   ```
 
-  - ..  ：多个连续的任意符号，可以独立出现，常用于简化包名与参数的书写
+  - `..`  ：**多个连续**的任意符号，可以独立出现，常用于简化包名与参数的书写
 
   ```java
   execution(public User com..UserService.findById(..))
   ```
 
-  - \+ ：专用于匹配子类类型
+  - `+` ：专用于匹配子类类型
 
   ```java
   execution(* *..*Service+.*(..))
@@ -4497,24 +4697,29 @@ public class MyAdvice {
 
 ### 通知类型
 
-- @Before
-- @After
-- @Around
+- `@Before`：前置通知，在被代理的目标方法**前**执行
+
+- `@After`：后置通知，在被代理的目标方法**最终结束后**执行（盖棺定论）
+
+- `@Around`：环绕通知
+  
   - 需要依赖形参
   - 方法的返回值为Object，方法执行完后要有返回值
+  
+  ```java
+  @Around("切入点方法")
+  public Object around(ProceedingJoinPoint pjp) throws Throwable{
+      System.out.println("原始方法前");
+      // 对原始方法进行调用
+      Object o = pjp.proceed();
+      // pjp.getSignature() = int cn.eli.bean.Calculator.div(int,int)
+      System.out.println("原始方法后");
+      return o;
+  }
+  ```
 
-```java
-@Around("切入点方法")
-public Object around(ProceedingJoinPoint pjp) throws Throwable{
-    System.out.println("原始方法前");
-    Object o = pjp.proceed();//表示对原始方法的调用
-    System.out.println("原始方法后");
-    return o;
-}
-```
-
-- @AfterReturning	原始方法成功执行完以后执行此方法
-- @AfterThrowing     原始方法抛出异常后执行此方法
+- `@AfterReturning`：返回通知，原始方法**成功执行完后**执行此方法
+- `@AfterThrowing`：异常通知，原始方法**异常结束后**执行此方法
 
 
 
@@ -4527,16 +4732,17 @@ public Object around(ProceedingJoinPoint pjp) throws Throwable{
 
 - 获取返回值
 
-  - @Around 获取返回值
+  - `@Around` 获取返回值
 
   ```java
   Object o = pjp.proceed();
   ```
 
-  - @AfterReturning 获取返回值
+  - `@AfterReturning` 获取返回值
 
   ```java
-  @AfterReturning(value="切入点方法",returning="ret")//将原始方法的返回值注入到形参ret中
+  // 将原始方法的返回值注入到形参ret中
+  @AfterReturning(value="切入点方法", returning="ret")
   public void afterReturning(Object ret){
       方法体;
   }
@@ -4544,7 +4750,7 @@ public Object around(ProceedingJoinPoint pjp) throws Throwable{
 
 - 获取异常
 
-  - @Around 获取异常
+  - `@Around` 获取异常
 
   ```java
   try{
@@ -4552,10 +4758,10 @@ public Object around(ProceedingJoinPoint pjp) throws Throwable{
   }catch(Throwable e){}
   ```
 
-  - @AfterThrowing 获取异常
+  - `@AfterThrowing` 获取异常
 
   ```java
-  @AfterReturning(value="切入点方法",throwing="thr")//将原始方法抛出的异常注入到形参thr中
+  @AfterReturning(value="切入点方法", throwing="thr")//将原始方法抛出的异常注入到形参thr中
   public void afterThrowing(Throwable thr){
       方法体;
   }
@@ -4692,7 +4898,7 @@ public @interface Transactional {
         <plugin>
             <groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
-            <version>2.1</version>
+            <version>2.2</version>
             <configuration>
                 <port>80</port>
                 <path>/</path>
